[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/spawner_eroi.gd" type="Script" id=1]

[node name="SpawnerEroi" type="Node2D"]
script = ExtResource( 1 )
min_wait_time = 1
max_wait_time = 3
wave_dim = 10

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnEdges" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnEdges"]
position = Vector2( 32, 32 )

[node name="Position2D2" type="Position2D" parent="SpawnEdges"]
position = Vector2( 1000, 32 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
